--- a/styles/architects.css
+++ b/styles/architects.css
@@ -12,6 +12,19 @@
 .display-flex{
     display: flex;
 }
+
+.btn-primary{
+    background-color: #FF900E;
+    color: #ffffff;
+    padding: 20px 25px;
+    border-radius: 8px;
+    border: none;
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-bottom: 50px;
+}
+/* dark 1 */
+
 /* dark 02 */
 .text-gray{
     color: #424242;
@@ -30,18 +43,43 @@
 /* navbar related styles */
 .navbar{
     justify-content: space-between;
+    align-items: center;
 }
 
+.brand{
+    font-weight: bold;
+    font-size: 3rem;
+}
 .nav-item{
     list-style: none;
     margin-right: 30px;
 }
 .nav-link{
     text-decoration: none;
-    font-weight: 500px;
+    font-weight: 500;
 }
 
 .navbar, .banner{
     max-width: 1440px;
     margin: 0 auto;
+}
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-image{
+    width: 100%;
+}
+
+/* responsive media query */
+@media screen and (max-width:576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
 }
