made team responsive and added fact structure

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -23,6 +23,16 @@
     font-size: 1.25rem;
     margin-bottom: 50px;
 }
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
 /* dark 1 */
 
 /* dark 02 */
@@ -75,11 +85,73 @@
 }
 .banner-image{
     width: 100%;
+    margin-bottom: 45px;
 }
+
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+    margin-top: 85px;
+    border-radius: 8px;
+}
+
+.our-features{
+    margin-left: 73px;
+}
+
+.feature-title{
+    font-size: 2.8rem;
+
+}
+
+#gray{
+    color: #727272;
+    font-weight: 500;
+}
+
+.black{
+    color: #131313;
+    font-weight: 700;
+}
+
+.orange{
+    color: #FF900E;
+    font-weight: 700;
+}
+
+.feature-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+    padding: 0 0 24px;
+}
+
 
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar, .nav-links{
+    .navbar, .nav-links, .teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 24px;
+    }
+}
+
+/* Medium size device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: auto 100px;
     }
 }
