--- a/styles/architects.css
+++ b/styles/architects.css
@@ -132,26 +132,107 @@ main > section{
     padding: 0 0 24px;
 }
 
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    
+}
+
+.fact-description{
+    width: 542px;
+    margin-bottom: 100px;
+    margin-top: 24px;
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.fact-number{
+    font-weight: 600;
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.fact-name{
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #727272;
+    margin-top: 10px;
+}
+
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    filter: grayscale(100%);
+}
 
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar, .nav-links, .teams{
+    .navbar, .nav-links, .teams, .some-facts, .our-sponsors{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .facts-container{
         grid-template-columns: repeat(1, 1fr);
     }
     .our-features{
         margin-left: 24px;
     }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
+    }
+    .fact-description{
+        width: auto;
+    }
+    .sponsor-companies{
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+        gap: 50px;
+    }
 }
+
 
 /* Medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
     .teams{
         flex-direction: column;
     }
+    .banner-image{
+        margin-top: 10px;
+    }
     .our-features{
+        margin: auto;
+    }
+    .btn-primary{
         margin: auto 100px;
+    }
+    .feature-title, .feature-description{
+        margin-left: 100px;
+    }
+    .facts-container{
+        grid-template-columns: repeat(2,1fr);
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-info{
+        margin: auto 140px;
+    }
+    .sponsor-companies{
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        gap: 50px;
     }
 }
